--- a/KaloriWebApplication/Views/Account/Login.cshtml
+++ b/KaloriWebApplication/Views/Account/Login.cshtml
@@ -8,29 +8,29 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card mt-5">
-                <div class="card-header bg-primary text-white">
+                <div class="card-header bg-success text-white">
                     <h2 class="text-center">Login</h2>
                 </div>
                 <div class="card-body">
                     <form asp-action="Login" method="post">
                         <div class="form-group">
-                            <label asp-for="Username" class="text-primary">Username</label>
+                            <label asp-for="Username" class="text-success">Username</label>
                             <input asp-for="Username" class="form-control" />
                             <span asp-validation-for="Username" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="Password" class="text-primary">Password</label>
+                            <label asp-for="Password" class="text-success">Password</label>
                             <input asp-for="Password" type="password" class="form-control" />
                             <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-block">Login</button>
+                        <button type="submit" class="btn btn-success btn-block">Login</button>
                         <div class="text-danger mt-2">
                             @Html.ValidationSummary(false, "", new { @class = "text-danger" })
                         </div>
                     </form>
                 </div>
                 <div class="card-footer bg-light">
-                    <p class="text-center">Don't have an account? <a asp-controller="Account" asp-action="Register">Register here</a></p>
+                    <p class="text-center">Don't have an account? <a asp-controller="Account" asp-action="Register" class="text-success">Register here</a></p>
                 </div>
             </div>
         </div>
