--- a/KaloriWebApplication/wwwroot/css/site.css
+++ b/KaloriWebApplication/wwwroot/css/site.css
@@ -1,22 +1,37 @@
-html {
-  font-size: 14px;
+/* Önceki CSS kodlarý buraya gelecek */
+
+.menu {
+    display: none; /* Baþlangýçta menü gizli olsun */
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    .menu a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+        .menu a:hover {
+            background-color: #f1f1f1;
+        }
+
+.navbar {
+    background-color: white; /* Navbar arka plan rengi beyaz olarak ayarlandý */
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+.menu-icon {
+    color: black; /* Menü simgesi rengi siyah olarak ayarlandý */
+    cursor: pointer; /* Mouse'un üstüne geldiðinde el simgesi göster */
 }
 
-html {
-  position: relative;
-  min-height: 100%;
-}
+    .menu-icon:hover {
+        color: #258cfb; /* Menü simgesi rengi maviye döndürüldü */
+    }
 
-body {
-  margin-bottom: 60px;
+.show-menu {
+    display: block; /* show-menu sýnýfý eklendiðinde menüyü göster */
 }
