--- a/KaloriWebApplication/Views/Account/Register.cshtml
+++ b/KaloriWebApplication/Views/Account/Register.cshtml
@@ -30,6 +30,9 @@
                         </div>
                         <button type="submit" class="btn btn-success btn-block">Register</button>
                     </form>
+                    <form asp-action="TestCompleteProfile" method="get">
+                        <button type="submit" class="btn btn-secondary btn-block mt-2">Test</button>
+                    </form>
                 </div>
                 <div class="card-footer bg-light">
                     <p class="text-center">Already have an account? <a asp-controller="Account" asp-action="Login" class="text-success">Login here</a></p>
