--- a/KaloriWebApplication/Views/Account/Dashboard.cshtml
+++ b/KaloriWebApplication/Views/Account/Dashboard.cshtml
@@ -8,7 +8,7 @@
     </div>
 </div>
 <div class="menu" id="menu">
-    <a asp-controller="Account" asp-action="Profile">Profil</a>
+    <a asp-controller="Account" asp-action="CompleteProfile">Profil</a>
     <a asp-controller="Food" asp-action="Entry">Besin Girişi</a>
     <a asp-controller="Reports" asp-action="DailyWeekly">Günlük-Haftalık Raporlar</a>
     <a asp-controller="Notifications" asp-action="Index">Bildirimler</a>
