--- a/KaloriWebApplication/wwwroot/css/site.css
+++ b/KaloriWebApplication/wwwroot/css/site.css
@@ -35,3 +35,8 @@
 .show-menu {
     display: block; /* show-menu sýnýfý eklendiðinde menüyü göster */
 }
+
+
+.card-body{
+    background-color:white
+}
