--- a/KaloriWebApplication/Views/Shared/_Layout.cshtml
+++ b/KaloriWebApplication/Views/Shared/_Layout.cshtml
@@ -9,10 +9,7 @@
     <link rel="stylesheet" href="~/KaloriWebApplication.styles.css" asp-append-version="true" />
 
     <style>
-        /* Özelleştirilmiş CSS stilleri */
-        .navbar {
-            background-color: #4CAF50; /* Yeşil arka plan */
-        }
+
 
         .navbar-brand {
             color: #FFFFFF; /* Beyaz metin */
@@ -33,20 +30,26 @@
         }
 
         footer {
-            background-color: #f8f9fa; /* Açık gri arka plan */
+            background-color: rgba(47, 23, 15, 0.5); /* Açık gri arka plan */
             padding: 10px 0;
             text-align: center;
         }
 
-        main {
-            background-color: #FFFFFF; /* Beyaz arka plan */
-            padding: 20px;
-            border: 1px solid #DDDDDD; /* Hafif gri kenarlık */
-            border-radius: 5px;
+
+        body {
+            background: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url("/lib/deneme.jpeg");
+            background-attachment: fixed;
+            background-position: center;
+            background-size: cover;
         }
+
+        .container-fluid {
+            background-color: rgba(255, 255, 255, 0.5); /* White, semi-transparent background */
+            padding: 20px;
+
     </style>
 </head>
-<body>
+<body id ="fig">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
