--- a/KaloriWebApplication/Views/Account/Dashboard.cshtml
+++ b/KaloriWebApplication/Views/Account/Dashboard.cshtml
@@ -9,7 +9,7 @@
 
 <div class="menu" id="menu">
     <a asp-controller="Account" asp-action="CompleteProfile">Profil</a>
-    <a asp-controller="Food" asp-action="Entry">Besin Girişi</a>
+    <a asp-controller="Account" asp-action="NutrientSelect">Besin Girişi</a>
     <a asp-controller="Reports" asp-action="DailyWeekly">Günlük-Haftalık Raporlar</a>
     <a asp-controller="Notifications" asp-action="Index">Bildirimler</a>
 </div>
