--- a/KaloriWebApplication/Views/Account/CompleteProfile.cshtml
+++ b/KaloriWebApplication/Views/Account/CompleteProfile.cshtml
@@ -89,9 +89,12 @@
                 <label for="age">Age</label>
                 <input type="number" id="age" name="age" required>
             </div>
-            <div class="form-group">
+            <div class="form-group"> 
                 <label for="gender">Gender</label>
-                <input type="text" id="gender" name="gender" required>
+                <select id="goal" name="goal" required>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                </select>
             </div>
             <div class="form-group">
                 <label for="height">Height</label>
