--- a/KaloriWebApplication/Views/Account/Register.cshtml
+++ b/KaloriWebApplication/Views/Account/Register.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Register";
 }
 
-<div class="container">
+<div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <div class="card mt-5">
+            <div class="card">
                 <div class="card-header bg-success text-white">
                     <h2 class="text-center">Register</h2>
                 </div>
@@ -30,8 +30,8 @@
                         </div>
                         <button type="submit" class="btn btn-success btn-block">Register</button>
                     </form>
-                    <form asp-action="TestCompleteProfile" method="get">
-                        <button type="submit" class="btn btn-secondary btn-block mt-2">Test</button>
+                    <form asp-action="TestCompleteProfile" method="get" class="mt-2">
+                        <button type="submit" class="btn btn-secondary btn-block">Test Complete Profile</button>
                     </form>
                 </div>
                 <div class="card-footer bg-light">
