--- a/KaloriWebApplication/Views/Account/Dashboard.cshtml
+++ b/KaloriWebApplication/Views/Account/Dashboard.cshtml
@@ -10,8 +10,8 @@
 <div class="menu" id="menu">
     <a asp-controller="Account" asp-action="EditProfile">Profil</a>
     <a asp-controller="Account" asp-action="NutrientSelect">Besin Girişi</a>
-    <a asp-controller="Reports" asp-action="DailyWeekly">Günlük-Haftalık Raporlar</a>
-    <a asp-controller="Notifications" asp-action="Index">Bildirimler</a>
+    <a asp-controller="Profile" asp-action="ProfileEditing">Günlük-Haftalık Raporlar</a>
+    <a asp-controller="Account" asp-action="ProfileUpdating">Bildirimler</a>
 </div>
 <div class="content">
     <h1>Hoş Geldiniz</h1>
