--- a/KaloriWebApplication/Views/Account/Dashboard.cshtml
+++ b/KaloriWebApplication/Views/Account/Dashboard.cshtml
@@ -8,7 +8,7 @@
     </div>
 
 <div class="menu" id="menu">
-    <a asp-controller="Account" asp-action="EditProfile">Profil</a>
+    <a asp-controller="Profile" asp-action="ProfileEditing">Profil</a>
     <a asp-controller="Account" asp-action="NutrientSelect">Besin Girişi</a>
     <a asp-controller="Profile" asp-action="ProfileEditing">Günlük-Haftalık Raporlar</a>
     <a asp-controller="Account" asp-action="ProfileUpdating">Bildirimler</a>
