--- a/KaloriWebApplication/Views/Account/Dashboard.cshtml
+++ b/KaloriWebApplication/Views/Account/Dashboard.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Dashboard";
 }
 <style>
-    .content{
+    .content {
         background-color: rgba(192, 192, 192, 0.3);
     }
 </style>
@@ -18,6 +18,8 @@
     <a asp-controller="Account" asp-action="ProfileUpdating">Bildirimler</a>
 </div>
 <div class="content">
+    <label for="datePicker">Tarih Seç:</label>
+    <input type="date" id="datePicker">
     <button id="showNutrientsButton" class="btn btn-primary">Eklenilen Besinleri Göster</button>
     <div id="nutrientsTable" style="display:none;">
         <h2>Eklenilen Besinler</h2>
@@ -48,49 +50,54 @@
     <script>
         $(document).ready(function () {
             $('#showNutrientsButton').click(function () {
-                $.ajax({
-                    url: '@Url.Action("GetUserNutrients", "Nutrient")',
-                    type: 'GET',
-                    success: function (response) {
-                        var nutrientsBody = $('#nutrientsBody');
-                        nutrientsBody.empty();
-                        if (response.length > 0) {
-                            $.each(response, function (index, item) {
-                                var caloriesPer100Grams = parseInt(item.caloryNutrient.cals_per100grams.replace(" cal", "")) || 0;
-                                var totalCaloriesPerItem = (item.quantity / 100 * caloriesPer100Grams).toFixed(2);
+                var selectedDate = $('#datePicker').val();
+                if (selectedDate) {
+                    $.ajax({
+                        url: '@Url.Action("GetUserNutrientsByDate", "Nutrient")',
+                        type: 'GET',
+                        data: { date: selectedDate },
+                        success: function (response) {
+                            var nutrientsBody = $('#nutrientsBody');
+                            nutrientsBody.empty();
+                            if (response.length > 0) {
+                                $.each(response, function (index, item) {
+                                    var caloriesPer100Grams = parseInt(item.caloryNutrient.cals_per100grams.replace(" cal", "")) || 0;
+                                    var totalCaloriesPerItem = (item.quantity / 100 * caloriesPer100Grams).toFixed(2);
 
-                                // AJAX request to get total calories for each date
+                                    var row = '<tr>'
+                                        + '<td>' + new Date(item.dateLogged).toLocaleDateString() + '</td>'
+                                        + '<td>' + item.caloryNutrient.foodItem + '</td>'
+                                        + '<td>' + item.quantity + '</td>'
+                                        + '<td>' + caloriesPer100Grams + ' cal</td>'
+                                        + '</tr>';
+                                    nutrientsBody.append(row);
+                                });
+
                                 $.ajax({
                                     url: '@Url.Action("GetTotalCaloriesByDate", "Nutrient")',
                                     type: 'GET',
-                                    data: { date: new Date(item.dateLogged).toISOString().split('T')[0] },
+                                    data: { date: selectedDate },
                                     success: function (caloriesResponse) {
-                                        var row = '<tr>'
-                                            + '<td>' + new Date(item.dateLogged).toLocaleDateString() + '</td>'
-                                            + '<td>' + item.caloryNutrient.foodItem + '</td>'
-                                            + '<td>' + item.quantity + '</td>'
-                                            + '<td>' + caloriesPer100Grams + ' cal</td>'
-                                            + '</tr>';
-                                        nutrientsBody.append(row);
-
-                                        // Update total calories after appending row
                                         $('#totalCalories').text(caloriesResponse.success ? caloriesResponse.totalCalories : 'Veri bulunamadı');
                                     },
                                     error: function () {
                                         alert('Toplam kalori verilerini çekerken hata oluştu.');
                                     }
                                 });
-                            });
-                            $('#nutrientsTable').show();
-                        } else {
-                            nutrientsBody.append('<tr><td colspan="5">Kayıt bulunamadı</td></tr>');
-                            $('#nutrientsTable').show();
+
+                                $('#nutrientsTable').show();
+                            } else {
+                                nutrientsBody.append('<tr><td colspan="5">Kayıt bulunamadı</td></tr>');
+                                $('#nutrientsTable').show();
+                            }
+                        },
+                        error: function () {
+                            alert('Besin kayıtlarını çekerken hata oluştu.');
                         }
-                    },
-                    error: function () {
-                        alert('Besin kayıtlarını çekerken hata oluştu.');
-                    }
-                });
+                    });
+                } else {
+                    alert('Lütfen bir tarih seçin.');
+                }
             });
         });
     </script>
