--- a/KaloriWebApplication/Views/_ViewImports.cshtml
+++ b/KaloriWebApplication/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using KaloriWebApplication
 @using KaloriWebApplication.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
